# deterministic_docker_test

./: .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  build.gradle.kts  genkeys.sh  imageid.sign  key.pub  preverify.sh  settings.gradle.kts  sign.sh
.github/workflows/: main.yml  master.yml  prs.yml  snyk.yml
deploy/: dev.yml  nais.yml
src/main/kotlin/no/nav/helse/: App.kt  Probe.kt  Web.kt
src/main/kotlin/no/nav/helse/testgreier/: TestNoeXmlGreier.kt
src/main/resources/: hentRollerResponse.xml
src/main/resources/xsd/: HentRoller.xsd
src/test/kotlin/no/nav/helse/: WebTest.kt
src/test/resources/: logback-test.xml
